--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2.5.2 / 2010-04-06
+
+* 1 minor enhancement
+  * Updated to include method params now that RDoc::AnyMethod dumps them
+
 === 2.5.1 / 2010-04-01
 
 * 1 bug fixed
