--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 2.5.4 / 2010-12-30
+
+* Minor enhancements
+  * rdoc-data now fails if run on Ruby 1.9.2 or newer.  1.9.2+ already ships
+    with the modern ri format.
+
 === 2.5.3 / 2010-04-14
 
 * 1 Minor Enhancement
@@ -16,6 +22,5 @@
 === 2.5 / 2010-03-31
 
 * 1 Major Enhancement
-
   * Birthday!
 
