SYSDIR was removed in RDoc 4
I did not test installation and missed this bug.

Fixes #3

--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 4.0.1 / 2013-06-04
+
+* Bug fixes
+  * Fixed installation due to removal of SYSDIR in RDoc 4.  Bug #3 by Charles
+    Oliver Nutter.
+
 === 4.0 / 2013-06-04
 
 * Minor enhancements
